--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!--<div class="container link-outlet">-->
 <div class="container link-outlet">
     <div class="sidebar-panel col-md-3 col-lg-3 col-sm-4">
-        <div class="panel-heading">Filters</div>
+        <div class="panel-heading"><strong>Filters</strong></div>
         <ul class="nav">
             <li><a>Date</a></li>
             <li><a>Category</a></li>
