--- a/src/app/shared/app-header/app.header.component.html
+++ b/src/app/shared/app-header/app.header.component.html
@@ -9,6 +9,7 @@
                 <li><a routerLink="/documents">My Documents</a></li>
                 <li><a routerLink="/upload">Upload Files</a></li>
                 <li><a>Help & FAQs</a></li>
+                <li><a routerLink="/login"> Login </a></li>
             </ul>
         </div>
     </div>
