switched to angular cli

--- a/src/app/shared/app-header/app.header.component.html
+++ b/src/app/shared/app-header/app.header.component.html
@@ -1,17 +1,19 @@
 <header>
-<nav class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand">Logo Place</a>
+    <nav class="navbar navbar-fixed-top navbar-inverse">
+        <div class="container">
+            <div class="navbar-header">
+                <a routerLink="/documents" class="navbar-brand">
+                    <img src="assets/download.jpg" height="30" width="50"/>
+                </a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a routerLink="/documents">My Documents</a></li>
+                    <li><a routerLink="/upload">Upload Files</a></li>
+                    <li><a>Help & FAQs</a></li>
+                    <li><a routerLink="/login"> Login </a></li>
+                </ul>
+            </div>
         </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a routerLink="/documents">My Documents</a></li>
-                <li><a routerLink="/upload">Upload Files</a></li>
-                <li><a>Help & FAQs</a></li>
-                <li><a routerLink="/login"> Login </a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+    </nav>
 </header>
