--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,5 @@
-<header-component></header-component>
-<!--<div class="container link-outlet">-->
+<app-header></app-header>
 <div class="container link-outlet">
-    <div class="sidebar-panel col-md-3 col-lg-3 col-sm-4">
-        <div class="panel-heading"><strong>Filters</strong></div>
-        <ul class="nav">
-            <li><a>Date</a></li>
-            <li><a>Category</a></li>
-            <li><a>Folders</a></li>
-            <li><a>Recent</a></li>
-        </ul>
-    </div>
-
-    <!--</div>-->
-    <div class="col-md-9 col-log-9 col-sm-8">
-        <router-outlet></router-outlet>
-    </div>
+    <router-outlet></router-outlet>
 </div>
-<footer-component></footer-component>
+<app-footer></app-footer>
